k8s/demo/demo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: demo
